# marvelous-databricks-course-a0134m

./: .gitignore  CODEOWNERS  Dockerfile  README.md  databricks.yml  dbconnect_example.py  main.py  project_config.yml  project_config_dev.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
asset_bundles/: wine_quality_model.yaml
data/: wine_quality.csv
mlruns/0/: meta.yaml
notebooks/: wine_quality-0.0.1-py3-none-any.whl
notebooks/week2/: 01.prepare_dataset.py  02.mlflow_experiments.py  03.log_and_register_model.py  04.log_and_register_custom_model.py  05.log_and_register_fe_model.py
notebooks/week2/mlruns/0/: meta.yaml
notebooks/week3/: 01. feature_serving.py  02.model_serving.py  03.model_serving_feature_lookup.py  04.AB_test_model_serving.py
notebooks/week5/: 00.create_source_data.py
src/diabetes_predictor/: data_processor.py
src/wine_quality/: config.py  data_processor.py  utils.py  wine_quality_model.py
tests/: conftest.py  test_config.yml  test_data_processor.py
week5/: deploy_model.py  evaluate_model.py  preprocess.py  train_model.py  workspace_utils.py
