[project]
name = "wine-quality"
version = "0.0.1"
description = "MLOps with Databricks using Wine Quality"
readme = "README.md"
requires-python = "==3.11.10"
dependencies = ["lightgbm==4.5.0",
                "scikit-learn==1.5.2",
                "cloudpickle==3.1.0",
                "mlflow==2.17.0",
                "numpy==1.26.4",
                "pandas==2.2.3",
                "pyarrow>=14.0.1",
                "cffi==1.17.1",
                "scipy==1.14.1",
                "matplotlib==3.9.2",
                "databricks-feature-engineering==0.6",
                "databricks-feature-lookup==1.2.0",
                "pydantic==2.9.2",
                "psutil==6.0.0"
                ]

[project.optional-dependencies]
dev = ["databricks-connect>=15.4.1, <16",
       "databricks-sdk>=0.32.0, <0.33",
       "ipykernel>=6.29.5, <7",
       "pip>=24.2",
       "pytest>=8.3.3"]

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
